fix: (in 1282px) add align-items:center to all major containers, add gap in footer, remove div but add .container

--- a/shelter/media.css
+++ b/shelter/media.css
@@ -1,7 +1,8 @@
 @media screen and (min-width: 1282px) {
-	div, .header, .main, .nav, .about, .friends, .help, .in-addition, .footer {
+	.header, .container, .main, .nav, .about, .friends, .help, .in-addition, .footer {
 		max-width: 100vw;
 		justify-content: center;
+		align-items: center;
 	}
 
 	.help-icons { max-width: 1280px; }
@@ -15,7 +16,8 @@
 	}
 
 	.burger { visibility: hidden; }
-	
+
+	.footer { gap: 160px; }
 }
 
 @media screen and (max-width: 1281px) {
